# Jable

./: README.md  main.py  pyproject.toml  quickstart.ipynb
.ipynb_checkpoints/: quickstart-checkpoint.ipynb
PyJable/: JsonTable.py  Printing.py  jable.py
docs/html/: .buildinfo  JsonTable.html  genindex.html  index.html  jable.html  jyFrame.html  objects.inv  printing.html  py-modindex.html  search.html  searchindex.js
docs/html/_sources/: JsonTable.rst.txt  index.rst.txt  jable.rst.txt  jyFrame.rst.txt  printing.rst.txt
src/jable/: jyFrame.py  printing.py
